# cmaked2

./: README.txt  run_tests_linux.sh
cmaked/: CMakeDInformation.cmake  CMakeDetermineDCompiler.cmake  CMakeLists.txt  Copyright.txt
cmaked/Platform/: Linux-dmd.cmake  Linux-gdc.cmake  Windows-dmd.cmake
tests/: CMakeLists.txt
